grammar.js
    source_file: $ => repeat($._record),

    _record: $ => choice(
      $.problem_record,
      $.input_record,
      $.data_record,
      $.subroutines_record,
      $.model_record,
      $.pk_record,
      $.des_record,
      $.error_record,
      $.pred_record,
      $.theta_record,
      $.omega_record,
      $.sigma_record,
      $.estimation_record,
      $.covariance_record,
      $.table_record,
      $.simulation_record,
      $.abbreviated_record,
      $.sizes_record,
      $.mix_record,
      $.msfi_record,
      $.nonparametric_record,
      $.prior_record,
      $.thetap_record,
      $.thetapv_record,
      $.omegap_record,
      $.omegapd_record,
      $.sigmap_record,
      $.sigmapd_record,
      $.scatter_record,
    ),

    problem_record: $ => seq(
      alias(recordKeyword('PROB', 'PROBLEM'), $.record_keyword),
      optional($.problem_text),
    ),

    problem_text: $ => /[^\n$]+/,

    input_record: $ => seq(
      alias(recordKeyword('INP', 'INPT', 'INPUT'), $.record_keyword),
      repeat($.column_def),
    ),

    data_record: $ => seq(
      alias(recordKeyword('DAT', 'DATA', 'INFILE'), $.record_keyword),
      optional(choice($.filename, $.string)),
      repeat($._data_option),
    ),

    _data_option: $ => choice(
      $.ignore_option,
      $.accept_option,
      $.rewind_option,
      $.records_option,
      $.null_option,
      $.wide_option,
      $.checkout_option,
    ),

    ignore_option: $ => seq(
      alias(/(IGN|IGNORE)/i, $.option_name),
      optional('='),
      choice($.ignore_character, $.ignore_condition),
    ),

    ignore_character: $ => /[^\s\(\)=]/,
    subroutines_record: $ => seq(
      alias(recordKeyword('SUB', 'SUBR', 'SUBS', 'SUBROUTINE', 'SUBROUTINES'), $.record_keyword),
      repeat($._subroutines_option),
    ),

    _subroutines_option: $ => choice(
      $.advan_option,
      $.trans_option,
      $.tol_option,
    ),

    advan_option: $ => choice(
      /ADVAN\d+/i,
      seq(/ADVAN/i, '=', field('number', $.integer)),
    ),
    tol_option: $ => seq(alias(/TOL/i, $.option_name), optional('='), $.integer),

    model_record: $ => seq(
      alias(recordKeyword('MOD', 'MODEL'), $.record_keyword),
      repeat($._model_option),
    ),

    _model_option: $ => choice(
      $.comp_def,
      $.ncomp_option,
    ),

    comp_def: $ => seq(
      alias(/COMP(ARTMENT)?/i, $.option_name),
      optional('='),
      choice(
        seq('(', field('name', $.identifier), repeat(seq(optional(','), $.comp_option)), ')'),
        field('name', $.identifier),
      ),
    ),

    comp_option: $ => choice(
      /DEFDOSE/i,
      /DEFOBS/i,
      /DEFOBSERVATION/i,
      /NODOSE/i,
      /INITIALOFF/i,
      /NOOFF/i,
    ),
    ncomp_option: $ => seq(alias(/NCOMP(ARTMENTS)?/i, $.option_name), optional('='), $.integer),

    pk_record: $ => seq(
      alias(recordKeyword('PK'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    des_record: $ => seq(
      alias(recordKeyword('DES'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    error_record: $ => seq(
      alias(recordKeyword('ERR', 'ERRO', 'ERROR'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    pred_record: $ => seq(
      alias(recordKeyword('PRED'), $.record_keyword),
      optional($.record_options),
      repeat($._statement),
    ),

    _statement: $ => choice(
      $.assignment,
      $.if_statement,
      $.block_if,
      $.do_loop,
      $.do_while_loop,
      $.exit_statement,
      $.call_statement,
      $.fortran_line,
    ),

    fortran_line: $ => /"[^\n]*/,

    if_statement: $ => seq(
      alias(/IF/i, $.keyword),
      '(',
      field('condition', $._expression),
      ')',
      field('action', $._statement),
    ),

    block_if: $ => seq(
      alias(/IF/i, $.keyword),
      '(',
      field('condition', $._expression),
      ')',
      alias(/THEN/i, $.keyword),
      field('body', $.statement_block),
      repeat($.elseif_clause),
      optional($.else_clause),
      alias(/END\s*IF/i, $.keyword),
    ),

    statement_block: $ => repeat1($._statement),

    elseif_clause: $ => seq(
      alias(/(ELSEIF|ELSE[ \t]+IF)/i, $.keyword),
      '(',
      field('condition', $._expression),
      ')',
      alias(/THEN/i, $.keyword),
      field('body', $.statement_block),
    ),

    else_clause: $ => seq(
      alias(/ELSE/i, $.keyword),
      field('body', $.statement_block),
    ),

    do_loop: $ => seq(
      alias(/DO/i, $.keyword),
      field('variable', $.identifier),
      '=',
      field('start', $._expression),
      ',',
      field('end', $._expression),
      optional(seq(',', field('step', $._expression))),
      field('body', $.statement_block),
      alias(/END\s*DO/i, $.keyword),
    ),

    do_while_loop: $ => seq(
      alias(/DO/i, $.keyword),
      alias(/WHILE/i, $.keyword),
      '(',
      field('condition', $._expression),
      ')',
      field('body', $.statement_block),
      alias(/END\s*DO/i, $.keyword),
    ),

    call_statement: $ => seq(
      alias(/CALL/i, $.keyword),
      field('name', $.identifier),
      optional(seq('(', optional(field('arguments', $.argument_list)), ')')),
    ),

    argument_list: $ => seq($._expression, repeat(seq(',', $._expression))),

    exit_statement: $ => seq(
      alias(/EXIT/i, $.keyword),
      optional(seq(field('code', $.integer), optional(field('level', $.integer)))),
    ),

    assignment: $ => seq(
      field('target', choice($.identifier, $.indexed_access)),
      '=',
      field('value', $._expression),
    ),

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.function_call,
      $.theta_ref,
      $.eta_ref,
      $.err_ref,
      $.eps_ref,
      $.indexed_access,
      $.identifier,
      $.number,
    ),

    binary_expression: $ => choice(
      // Exponentiation (highest, right-associative)
      prec.right(4, seq(field('left', $._expression), field('operator', alias('**', $.arithmetic_operator)), field('right', $._expression))),
      // Multiplication/Division
      prec.left(3, seq(field('left', $._expression), field('operator', alias('*', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(3, seq(field('left', $._expression), field('operator', alias('/', $.arithmetic_operator)), field('right', $._expression))),
      // Addition/Subtraction
      prec.left(2, seq(field('left', $._expression), field('operator', alias('+', $.arithmetic_operator)), field('right', $._expression))),
      prec.left(2, seq(field('left', $._expression), field('operator', alias('-', $.arithmetic_operator)), field('right', $._expression))),
      // Comparisons (Fortran and C-style)
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.EQ\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.NE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LT\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.GE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.LE\./i)), $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('==', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('/=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('>=', $.comparison_operator)), field('right', $._expression))),
      prec.left(1, seq(field('left', $._expression), field('operator', alias('<=', $.comparison_operator)), field('right', $._expression))),
      // Logical (lowest)
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.AND\./i)), $.logical_operator)), field('right', $._expression))),
      prec.left(0, seq(field('left', $._expression), field('operator', alias(token(prec(1, /\.OR\./i)), $.logical_operator)), field('right', $._expression))),
    ),

    theta_ref: $ => seq(/THETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    eta_ref: $ => seq(/ETA/i, '(', field('index', choice($.integer, $.identifier)), ')'),
    eps_ref: $ => seq(/EPS/i, '(', field('index', choice($.integer, $.identifier)), ')'),

    indexed_access: $ => seq(
      field('name', $.identifier),
      '(',
      field('indices', $.index_list),
      ')',
    ),

    index_list: $ => seq($._expression, repeat(seq(',', $._expression))),

    theta_record: $ => seq(
      alias(recordKeyword('THE', 'THET', 'THTA', 'THETA'), $.record_keyword),
      repeat($.theta_init),
    ),

    theta_init: $ => seq(
      field('value', choice($.number, $.theta_bounds)),
      optional(field('fixed', $.fix_option)),
    ),

    omega_record: $ => seq(
      alias(recordKeyword('OME', 'OMEG', 'OMEGA'), $.record_keyword),
      repeat($._omega_item),
    ),

    _omega_item: $ => choice(
      $.omega_init,
      $.block_spec,
      $.diagonal_spec,
      $.same_option,
      $.structure_option,
    ),

    omega_init: $ => seq(
      field('value', choice($.number, seq('(', $.number, optional($.fix_option), ')'))),
      optional(field('fixed', $.fix_option)),
    ),

    sigma_record: $ => seq(
      alias(recordKeyword('SIG', 'SIGM', 'SIGMA'), $.record_keyword),
      repeat($._sigma_item),
    ),

    _sigma_item: $ => choice(
      $.sigma_init,
      $.block_spec,
      $.diagonal_spec,
      $.same_option,
      $.structure_option,
    ),

    estimation_record: $ => seq(
      alias(recordKeyword('EST', 'ESTI', 'ESTIM', 'ESTIMATION'), $.record_keyword),
      repeat($._estimation_option),
    ),

    _estimation_option: $ => choice(
      $.method_option,
      $.maxeval_option,
      $.print_option,
      $.noabort_option,
      $.posthoc_option,
      $.interaction_option,
      $.laplacian_option,
      $.niter_option,
      $.nburn_option,
      $.isample_option,
      $.sig_option,
      $.sigl_option,
      $.sigdig_option,
      $.nsig_option,
      $.like_option,
      $.numerical_option,
      $.slow_option,
      $.nothetaboundtest_option,
      $.noomegaboundtest_option,
      $.nosigmaboundtest_option,
      $.eonly_option,
      $.seed_option,
      $.ctype_option,
      $.citer_option,
      $.calpha_option,
      $.msfo_option,
      $.mceta_option,
      $.twoll_option,
      $.nointer_option,
      $.format_option,
      $.auto_option,
      $.mapiter_option,
      $.file_option,
      $.fnleta_option,
      $.atol_option,
      $.rtol_option,
      $.centering_option,
      $.etabar_option,
      $.df_option,
    ),

    covariance_record: $ => seq(
      alias(recordKeyword('COV', 'COVA', 'COVAR', 'COVARIANCE'), $.record_keyword),
      repeat($._covariance_option),
    ),

    _covariance_option: $ => choice(
      $.print_option,
      $.unconditional_option,
      $.matrix_option,
      $.sigl_option,
      $.tol_option,
      $.special_option,
      $.slow_option,
      $.noslow_option,
      $.compress_option,
    ),

    unconditional_option: $ => /UNCONDITIONAL/i,
    table_record: $ => seq(
      alias(recordKeyword('TAB', 'TABL', 'TABLE'), $.record_keyword),
      repeat($._table_item),
    ),

    _table_item: $ => choice(
      $.table_column,
      $.file_option,
      $.noprint_option,
      $.oneheader_option,
      $.noappend_option,
      $.firstreconly_option,
      $.format_option,
      $.forward_option,
      $.append_option,
      $.conditional_option,
      $.esample_option,
      $.seed_option,
      $.wreschol_option,
    ),

    table_column: $ => choice(
      $.identifier,
      $.eta_ref,
      $.eps_ref,
      $.eta_range,
    ),

    file_option: $ => seq(alias(/FILE/i, $.option_name), optional('='), $.filename),
    simulation_record: $ => seq(
      alias(recordKeyword('SIM', 'SIMU', 'SIMULATION'), $.record_keyword),
      repeat($._simulation_option),
    ),

    abbreviated_record: $ => seq(
      alias(recordKeyword('ABB', 'ABBR', 'ABBREVIATED'), $.record_keyword),
      repeat($._abbreviated_option),
    ),

    _abbreviated_option: $ => choice(
      $.replace_option,
      $.deriv_option,
      $.declare_option,
      $.comres_option,
      $.protect_option,
    ),

    replace_option: $ => seq(
      alias(/REPLACE/i, $.option_name),
      choice($.identifier, $.indexed_access),
      '=',
      $._expression
    ),
    deriv_option: $ => seq(alias(/DERIV[12]/i, $.option_name), '=', field('value', choice(/YES/i, /NO/i))),
    declare_option: $ => seq(
      alias(/DECLARE/i, $.option_name),
      optional(alias(/INTEGER|REAL|DOUBLE\s+PRECISION|DOUBLEP/i, $.option_name)),
      repeat1(choice(
        seq($.identifier, '(', field('size', $.integer), ')'),
        $.identifier
      ))
    ),
    sizes_record: $ => seq(
      alias(recordKeyword('SIZ', 'SIZE', 'SIZES'), $.record_keyword),
      repeat($.sizes_setting),
    ),

    sizes_setting: $ => seq(
      field('name', alias(/[A-Z][A-Z0-9]*/i, $.identifier)),
      '=',
      field('value', $.integer),
    ),

    mix_record: $ => seq(
      alias(recordKeyword('MIX'), $.record_keyword),
      repeat($._statement),
    ),

    msfi_record: $ => seq(
      alias(recordKeyword('MSF', 'MSFI'), $.record_keyword),
      optional($.filename),
    ),

    nonparametric_record: $ => seq(
      alias(recordKeyword('NONP', 'NONPARAMETRIC'), $.record_keyword),
      repeat($._nonparametric_option),
    ),

    _nonparametric_option: $ => choice(
      $.unconditional_option,
    ),

    // Bayesian prior records
    _simulation_option: $ => choice(
      $.sim_seed,
      $.onlysim_option,
      $.subproblems_option,
      $.true_option,
    ),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
    filename: $ => /[A-Za-z0-9_.\-\/\\:~]+/,
