test/corpus/control_flow.txt
==================
Block IF THEN ELSE
==================

$PK
IF (SEX.EQ.1) THEN
  TVCL = THETA(1)
ELSE
  TVCL = THETA(2)
ENDIF

---

(source_file
  (pk_record
    (record_keyword)
    (block_if
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      (keyword)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (theta_ref index: (integer))))
      (else_clause
        (keyword)
        body: (statement_block
          (assignment
            target: (identifier)
            value: (theta_ref index: (integer)))))
      (keyword))))

==================
Block IF with ELSEIF
==================

$PK
IF (FORM.EQ.1) THEN
  F1 = 1
ELSEIF (FORM.EQ.2) THEN
  F1 = 0.5
ELSE
  F1 = 0
ENDIF

---

(source_file
  (pk_record
    (record_keyword)
    (block_if
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      (keyword)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (number)))
      (elseif_clause
        (keyword)
        condition: (binary_expression
          left: (identifier)
          operator: (comparison_operator)
          right: (number))
        (keyword)
        body: (statement_block
          (assignment
            target: (identifier)
            value: (number))))
      (else_clause
        (keyword)
        body: (statement_block
          (assignment
            target: (identifier)
            value: (number))))
      (keyword))))

==================
Block IF without ELSE
==================

$PK
IF (FLAG.EQ.1) THEN
  X = 1
ENDIF

---

(source_file
  (pk_record
    (record_keyword)
    (block_if
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      (keyword)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (number)))
      (keyword))))

==================
DO loop
==================

$PK
DO I = 1, 10
  SUM = SUM + X
ENDDO

---

(source_file
  (pk_record
    (record_keyword)
    (do_loop
      (keyword)
      variable: (identifier)
      start: (number)
      end: (number)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (binary_expression
            left: (identifier)
            operator: (arithmetic_operator)
            right: (identifier))))
      (keyword))))

==================
DO loop with step
==================

$PK
DO J = 1, 10, 2
  SUM = SUM + X
ENDDO

---

(source_file
  (pk_record
    (record_keyword)
    (do_loop
      (keyword)
      variable: (identifier)
      start: (number)
      end: (number)
      step: (number)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (binary_expression
            left: (identifier)
            operator: (arithmetic_operator)
            right: (identifier))))
      (keyword))))

==================
EXIT statement
==================

$PK
IF (X.LE.0) EXIT 1 3

---

(source_file
  (pk_record
    (record_keyword)
    (if_statement
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      action: (exit_statement
        (keyword)
        code: (integer)
        level: (integer)))))

==================
Nested IF
==================

$PK
IF (A.GT.0) THEN
  IF (B.GT.0) THEN
    X = 1
  ENDIF
ENDIF

---

(source_file
  (pk_record
    (record_keyword)
    (block_if
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      (keyword)
      body: (statement_block
        (block_if
          (keyword)
          condition: (binary_expression
            left: (identifier)
            operator: (comparison_operator)
            right: (number))
          (keyword)
          body: (statement_block
            (assignment
              target: (identifier)
              value: (number)))
          (keyword)))
      (keyword))))

==================
CALL statement
==================

$PK
CALL RANDOM(2, R)

---

(source_file
  (pk_record
    (record_keyword)
    (call_statement
      (keyword)
      name: (identifier)
      arguments: (argument_list
        (number)
        (identifier)))))

==================
DO WHILE loop
==================

$PK
DO WHILE (I.LT.N)
  X = X + 1
END DO

---

(source_file
  (pk_record
    (record_keyword)
    (do_while_loop
      (keyword)
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (identifier))
      body: (statement_block
        (assignment
          target: (identifier)
          value: (binary_expression
            left: (identifier)
            operator: (arithmetic_operator)
            right: (number))))
      (keyword))))

==================
EXIT with error codes
==================

$PK
IF (X.LT.0) EXIT 1 3

---

(source_file
  (pk_record
    (record_keyword)
    (if_statement
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      action: (exit_statement
        (keyword)
        code: (integer)
        level: (integer)))))

==================
END IF with space
==================

$PK
IF (X.GT.0) THEN
  Y = 1
END IF

---

(source_file
  (pk_record
    (record_keyword)
    (block_if
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      (keyword)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (number)))
      (keyword))))

==================
FORTRAN code line
==================

$PK
"FIRST
"IMAX=1000

---

(source_file
  (pk_record
    (record_keyword)
    (fortran_line)
    (fortran_line)))

==================
FORTRAN with COMMON block
==================

$PK
"FIRST
"      COMMON/PRCOMG/ IDUM1,IDUM2,IMAX
"INTEGER IDUM1,IDUM2,IMAX
"IMAX=5000000

---

(source_file
  (pk_record
    (record_keyword)
    (fortran_line)
    (fortran_line)
    (fortran_line)
    (fortran_line)))

==================
ELSE IF with space
==================

$PK
IF (X.EQ.1) THEN
  Y = 1
ELSE IF (X.EQ.2) THEN
  Y = 2
ENDIF

---

(source_file
  (pk_record
    (record_keyword)
    (block_if
      (keyword)
      condition: (binary_expression
        left: (identifier)
        operator: (comparison_operator)
        right: (number))
      (keyword)
      body: (statement_block
        (assignment
          target: (identifier)
          value: (number)))
      (elseif_clause
        (keyword)
        condition: (binary_expression
          left: (identifier)
          operator: (comparison_operator)
          right: (number))
        (keyword)
        body: (statement_block
          (assignment
            target: (identifier)
            value: (number))))
      (keyword))))

==================
CALL without arguments
==================

$PK
CALL SUPP

---

(source_file
  (pk_record
    (record_keyword)
    (call_statement
      (keyword)
      name: (identifier))))
